# sdinev-app

./: .gitignore  README.md
be/: Procfile  manage.py  pyproject.toml
be/apps/blog/: admin.py  api_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
be/apps/blog/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_options_category_tag.py  0004_alter_category_tag.py  0005_alter_blogpost_category.py  0006_rename_text_blogpost_content_and_more.py  0007_alter_blogpost_content.py  0008_alter_blogpost_content.py
be/apps/certification/: admin.py  api_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
be/apps/certification/migrations/: 0001_initial.py  0002_provider_alter_certification_provider.py
be/apps/projects/: admin.py  api_urls.py  models.py  serializers.py  views.py
be/apps/projects/migrations/: 0001_initial.py  0002_remove_project_name_project_picture_project_slug_and_more.py  0003_alter_project_picture_remove_project_stack_and_more.py  0004_alter_project_description.py
be/apps/vanilla/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
be/apps/vanilla/migrations/: 0001_initial.py  0002_aboutsection.py
be/sdweb/: asgi.py  settings.py  urls.py  wsgi.py
be/utils/: send_email.py
fe/: env.local  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/blog/: page.tsx
fe/app/blog/[category_slug]/: page.tsx
fe/app/blog/[category_slug]/[slug]/: page.tsx
fe/app/certifications/: page.tsx
fe/app/projects/: page.tsx
fe/components/: BorderBeam.tsx  ButtonHoverUnderlined.tsx  CertificationCard.tsx  DotPattern.tsx  Footer.tsx  HyperText.tsx  Navbar.tsx  OrbitingCircle.tsx  ProjectsAccordion.tsx  SelectFilter.tsx  Sparkles.tsx  Tabs.tsx  Terminal.tsx
fe/lib/: utils.ts
fe/src/: app.tsx  main.tsx
fe/src/components/: BorderBeam.tsx  ButtonHoverUnderlined.tsx  CertificationCard.tsx  DotPattern.tsx  Footer.tsx  HyperText.tsx  IconsCircle.tsx  ModalSuccess.tsx  Navbar.tsx  OrbitingCircle.tsx  ProjectsAccordion.tsx  SelectFilter.tsx  Sparkles.tsx  Tabs.tsx  Terminal.tsx
fe/src/pages/: AboutPage.tsx  BlogCategoryPage.tsx  BlogPage.tsx  BlogPostPage.tsx  CertificationsPage.tsx  ContactPage.tsx  HomePage.tsx  NotFoundPage.tsx  ProjectsPage.tsx
